openshift/deploy/base/calendar-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: calendar-service
  labels:
    app.kubernetes.io/name: calendar
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: corporate-calendar
    app.kubernetes.io/instance: dev
    app.kubernetes.io/managed-by: kubectl
spec:
  to:
    kind: Service
    name: calendar-service
  port:
    targetPort: http
  tls:
    termination: edge
